RESOLVED FIXED121709
-[WebHTMLConveter _getFloat:forNode:property:] leaks
https://bugs.webkit.org/show_bug.cgi?id=121709
Summary -[WebHTMLConveter _getFloat:forNode:property:] leaks
Alexey Proskuryakov
Reported 2013-09-20 13:24:38 PDT
Missing adoptNS().
Attachments
proposed fix (1.37 KB, patch)
2013-09-20 13:25 PDT, Alexey Proskuryakov
no flags
Alexey Proskuryakov
Comment 1 2013-09-20 13:25:29 PDT
Created attachment 212214 [details] proposed fix
Enrica Casucci
Comment 2 2013-09-20 13:26:36 PDT
Comment on attachment 212214 [details] proposed fix Thanks for fixing this!
WebKit Commit Bot
Comment 3 2013-09-20 13:39:47 PDT
Comment on attachment 212214 [details] proposed fix Clearing flags on attachment: 212214 Committed r156196: <http://trac.webkit.org/changeset/156196>
WebKit Commit Bot
Comment 4 2013-09-20 13:39:50 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.