-[WebHTMLConveter _getFloat:forNode:property:] leaks https://bugs.webkit.org/show_bug.cgi?id=121709

Reviewed by Enrica Casucci.

* platform/mac/HTMLConverter.mm:
(-[WebHTMLConverter _getFloat:forNode:property:]): Don't leak.


Canonical link: https://commits.webkit.org/139711@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156196 268f45cc-cd09-0410-ab3c-d52691b4dbfc